Bug 384722 - Backup use incorrect extension if xml file has been loaded
Summary: Backup use incorrect extension if xml file has been loaded
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-14 21:17 UTC by Ralf Habacker
Modified: 2019-08-29 01:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-09-14 21:17:23 UTC
kmymoney is able to load kmymoney files with extension .kml (archive) and .xml (simple xml file). Creating a backup file always creates a file with extension .kml which is incorrect in case an .xml file has been loaded.

How to reproduce:
1. start kmymoney
2. load kmymoney file with extension .xml
3. Select File->Backup and save the file

What happens ?
The saved file has an extension .kml

What is expected ?
The saved file should have the extension .xml
Comment 1 Ralf Habacker 2017-09-14 21:25:11 UTC
Git commit d29b5d261ed4c51a9ff1aab99767376ae62e5fec by Ralf Habacker.
Committed on 14/09/2017 at 21:24.
Pushed by habacker into branch '4.8'.

Fix 'Backup use incorrect extension if xml file has been loaded'

FIXED-IN:4.8.1

M  +2    -5    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/d29b5d261ed4c51a9ff1aab99767376ae62e5fec
Comment 2 Jack 2017-09-15 21:07:59 UTC
This differs from what I see.  My main file is .kmy.  I frequently use the \File\Backup menu selection, but the files it saves all still have .kmy extension.  I have not tested at all with .xml files, but am just wondering why I don't see any .kml files, or if archive and backup are not the same thing here.
Comment 3 Thomas Baumgart 2017-09-19 06:16:13 UTC
Git commit 9e5dddf1bf13e423d5b9eb4ad840e287e7305c14 by Thomas Baumgart, on behalf of Ralf Habacker.
Committed on 19/09/2017 at 06:11.
Pushed by tbaumgart into branch 'master'.

Fix 'Backup use incorrect extension if xml file has been loaded'

FIXED-IN:4.8.1

M  +2    -5    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/9e5dddf1bf13e423d5b9eb4ad840e287e7305c14