Fix 'Backup use incorrect extension if xml file has been loaded'

FIXED-IN:4.8.1
BUG:384722